+++++++++++
Python News
+++++++++++

What's New in Python 2.7.14?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- bpo-29935: Fixed error messages in the index() method of tuple and list
  when pass indices of wrong type.

- bpo-28598: Support __rmod__ for subclasses of str being called before
  str.__mod__.  Patch by Martijn Pieters.

- bpo-29602: Fix incorrect handling of signed zeros in complex constructor for
  complex subclasses and for inputs having a __complex__ method. Patch
  by Serhiy Storchaka.

- bpo-29347: Fixed possibly dereferencing undefined pointers
  when creating weakref objects.

- Issue #14376: Allow sys.exit to accept longs as well as ints. Patch
  by Gareth Rees.

- Issue #29028: Fixed possible use-after-free bugs in the subscription of the
  buffer object with custom index object.

- Issue #29145: Fix overflow checks in string, bytearray and unicode.
  Patch by jan matejek and Xiang Zhang.

- Issue #28932: Do not include <sys/random.h> if it does not exist.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- bpo-30375: Warnings emitted when compile a regular expression now always
  point to the line in the user code.  Previously they could point into inners
  of the re module if emitted from inside of groups or conditionals.

- bpo-30363: Running Python with the -3 option now warns about regular
  expression syntax that is invalid or has different semantic in Python 3
  or will change the behavior in future Python versions.

- bpo-30365: Running Python with the -3 option now emits deprecation warnings
  for getchildren() and getiterator() methods of the Element class in the
  xml.etree.cElementTree module and when pass the html argument to
  xml.etree.ElementTree.XMLParser().

- bpo-30365: Fixed a deprecation warning about the doctype() method of the
  xml.etree.ElementTree.XMLParser class.  Now it is emitted only when define